--- a/index.html
+++ b/index.html
@@ -101,27 +101,38 @@
         transition: var(--transition);
         position: relative;
       }
+      .nav-link {
+        position: relative;
+      }
+
+      .nav-link::after {
+        content: "";
+        position: absolute;
+        bottom: 0;
+        left: 50%;
+        transform: translateX(-50%);
+        width: 0;
+        height: 2px;
+        background: linear-gradient(90deg, #ff8c00, #ff6347);
+        transition: width 0.4s ease;
+      }
+
+      .nav-link:hover::after {
+        width: 70%;
+      }
+
+      .nav-link.active::after {
+        width: 70%;
+      }
+
       .nav-link:hover {
         color: var(--primary);
-        background: rgba(14, 165, 233, 0.1);
       }
+
       .nav-link.active {
-        background: var(--primary);
         color: white;
         font-weight: 600;
       }
-      .nav-link.active::after {
-        content: "";
-        position: absolute;
-        bottom: -8px;
-        left: 50%;
-        transform: translateX(-50%);
-        width: 20px;
-        height: 3px;
-        background: var(--primary);
-        border-radius: 2px;
-      }
-
       /* Hero */
       .hero {
         padding: 5rem 0 4rem;
