refactor/adjust-name

--- a/about.html
+++ b/about.html
@@ -422,7 +422,7 @@
         <div class="section-content">
           <div class="profile-main">
             <img
-              src="assets/peler.jpeg"
+              src="assets/rafael_christoper.png"
               alt="Rafael Christoper Suhandi"
               class="profile-avatar-img"
               style="
