--- a/data.html
+++ b/data.html
@@ -391,8 +391,7 @@
       <div class="container">
         <h1 class="page-title">Data Management</h1>
         <p class="page-subtitle">
-          Kelola dan eksplorasi dataset Reddit, Google Form, dan hasil integrasi
-          clustering
+          Kelola dan eksplorasi dataset Reddit dan Google Form
         </p>
       </div>
     </div>
