adjustment in navlink and zoom body

--- a/about.html
+++ b/about.html
@@ -57,6 +57,7 @@
         color: var(--gray-900);
         line-height: 1.5;
         min-height: 100vh;
+        zoom: 0.85;
       }
       .navbar {
         background: white;
