--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
         color: var(--gray-800);
         line-height: 1.6;
         min-height: 100vh;
+        zoom: 0.85;
       }
 
       /* Navbar */
