--- a/dashboard.html
+++ b/dashboard.html
@@ -43,6 +43,7 @@
         background: #f8fafc;
         color: var(--gray-800);
         line-height: 1.6;
+        zoom: 0.85;
       }
       .navbar {
         background: white;
@@ -84,16 +85,45 @@
         color: var(--gray-600);
         font-weight: 500;
       }
+
       .nav-link {
-        font-weight: 500;
         color: var(--gray-600);
-        transition: color 0.3s;
+        font-weight: 500;
+        padding: 0.5rem 1rem;
+        border-radius: var(--radius);
+        transition: var(--transition);
+        position: relative;
       }
+      .nav-link {
+        position: relative;
+      }
+
+      .nav-link::after {
+        content: "";
+        position: absolute;
+        bottom: 0;
+        left: 50%;
+        transform: translateX(-50%);
+        width: 0;
+        height: 2px;
+        background: linear-gradient(90deg, #ff8c00, #ff6347);
+        transition: width 0.4s ease;
+      }
+
+      .nav-link:hover::after {
+        width: 70%;
+      }
+
+      .nav-link.active::after {
+        width: 70%;
+      }
+
       .nav-link:hover {
         color: var(--primary);
       }
+
       .nav-link.active {
-        color: var(--primary);
+        color: white;
         font-weight: 600;
       }
       .section-divider {
