--- a/data.html
+++ b/data.html
@@ -53,6 +53,7 @@
         color: var(--gray-800);
         line-height: 1.6;
         min-height: 100vh;
+        zoom: 0.85;
       }
 
       .navbar {
